CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(CMAKE_C_STANDARD 11)

MESSAGE(STATUS "Building clearsilver library")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/cs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})

ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/util)

ADD_LIBRARY(clearsilver STATIC
	cs/cs.c
	cs/csdump.c
	cs/csparse.c)

TARGET_LINK_LIBRARIES(neo)
